--- a/services/order/deployment.yaml
+++ b/services/order/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: order-service
-          image: your-dockerhub-user/order-service:latest
+          image: vivien8/order-service:latest
           env:
             - name: KAFKA_BROKER
               value: "kafka.kafka.svc.cluster.local:9092"
