--- a/k8s/deployments/api-deployment.yaml
+++ b/k8s/deployments/api-deployment.yaml
@@ -21,16 +21,8 @@ spec:
           env:
             - name: KAFKA_BROKER
               value: "kafka.kafka.svc.cluster.local:9092"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: api-service
-  namespace: kafka
-spec:
-  type: ClusterIP
-  selector:
-    app: api-service
-  ports:
-    - port: 3000
-      targetPort: 3000
+          resources:
+            requests:
+              cpu: "100m"
+            limits:
+              cpu: "200m"
