--- a/charts/mychart/Chart.yaml
+++ b/charts/mychart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: mychart
-description: A Helm chart for Kubernetes
+description: A Helm chart for Kubernetes kafka microservices
 
 # A chart can be either an 'application' or a 'library' chart.
 #
