--- a/k8s/deployments/api-deployment.yaml
+++ b/k8s/deployments/api-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-service
-  namespace: kafka
+  namespace: dev
 spec:
   replicas: 1
   selector:
@@ -15,12 +15,12 @@ spec:
     spec:
       containers:
         - name: api-service
-          image: vivien8/api-service:latest
+          image: "vivien8/api-service:latest"
           ports:
             - containerPort: 3000
           env:
             - name: KAFKA_BROKER
-              value: "kafka.kafka.svc.cluster.local:9092"
+              value: "kafka.dev.svc.cluster.local:9092"
           resources:
             requests:
               cpu: "100m"
