--- a/k8s/statefulset/kafka.yaml
+++ b/k8s/statefulset/kafka.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: kafka
-  namespace: kafka
+  namespace: dev
 spec:
   serviceName: kafka
   replicas: 3
