--- a/charts/mychart/templates/ingress.yaml
+++ b/charts/mychart/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- $namespace := .Release.Namespace | default "default" }}
 {{- range .Values.services }}
 {{- if .ingress }}
 ---
@@ -5,7 +6,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .name }}-ingress
-  namespace: kafka
+  namespace: {{ $namespace }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -20,7 +21,8 @@ spec:
               service:
                 name: {{ .name }}
                 port:
-                  number: {{ .port }}
+                  number: {{ .servicePort }}
 ---
 {{- end }}
 {{- end }}
+
