--- a/charts/mychart/templates/networkpolicy.yaml
+++ b/charts/mychart/templates/networkpolicy.yaml
@@ -1,10 +1,11 @@
+{{- $namespace := .Release.Namespace | default "default" }}
 {{- range .Values.networkPolicies }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: {{ .name }}
-  namespace: {{ .namespace | default "default" }}
+  namespace: {{ $namespace }}
 spec:
   podSelector:
 {{ toYaml .podSelector | indent 4 }}
