--- a/charts/mychart/values.yaml
+++ b/charts/mychart/values.yaml
@@ -1,6 +1,7 @@
-namespace: kafka
+namespace: dev
+
 kafka:
-  broker: kafka.kafka.svc.cluster.local:9092
+  broker: kafka.dev.svc.cluster.local:9092
   image: apache/kafka
   tag: 4.1.0
   replicas: 3
@@ -11,7 +12,7 @@ services:
     image: vivien8/api-service
     tag: latest
     port: 3000
-    servicePort: 3000
+    servicePort: 80
     replicas: 1
     resources:
       requests:
@@ -19,7 +20,7 @@ services:
       limits:
         cpu: "200m"
     ingress:
-      host: api.kafka.local
+      host: api.dev.local
     hpa:
       minReplicas: 1
       maxReplicas: 5
@@ -30,23 +31,30 @@ services:
     image: vivien8/consumer-service
     tag: latest
     replicas: 1
+    port: 3000
+    servicePort: 80
+    ingress:
+      host: consumer.dev.local
 
   - name: producer-service
     image: vivien8/producer-service
     tag: latest
+    port: 3000
+    servicePort: 80
     replicas: 1
+    ingress:
+      host: producer.dev.local
+
 
 
 networkPolicies:
   - name: deny-all
-    namespace: kafka
     podSelector: {}
     policyTypes:
       - Ingress
       - Egress
 
   - name: api-allow
-    namespace: kafka
     podSelector:
       matchLabels:
         app: api-service
@@ -71,7 +79,6 @@ networkPolicies:
             port: 9092
 
   - name: consumer-allow
-    namespace: kafka
     podSelector:
       matchLabels:
         app: consumer-service
@@ -87,7 +94,6 @@ networkPolicies:
             port: 9092
 
   - name: producer-allow
-    namespace: kafka
     podSelector:
       matchLabels:
         app: producer-service
@@ -103,7 +109,6 @@ networkPolicies:
             port: 9092
 
   - name: kafka-allow
-    namespace: kafka
     podSelector:
       matchLabels:
         app: kafka
@@ -135,3 +140,139 @@ networkPolicies:
         ports:
           - protocol: TCP
             port: 9092
+
+  - name: prometheus-allow
+    podSelector:
+      matchLabels:
+        app.kubernetes.io/name: prometheus
+    policyTypes:
+      - Egress
+    egress:
+      - to:
+          - podSelector: {}
+        ports:
+          - protocol: TCP
+            port: 1
+            endPort: 62000
+
+  - name: prometheus-ingress-grafana
+    podSelector:
+      matchLabels:
+        app.kubernetes.io/name: prometheus
+    policyTypes:
+      - Ingress
+    ingress:
+      - from:
+          - podSelector:
+              matchLabels:
+                app.kubernetes.io/name: grafana
+        ports:
+          - protocol: TCP
+            port: 9090
+
+  - name: grafana-allow
+    podSelector:
+      matchLabels:
+        app.kubernetes.io/name: grafana
+    policyTypes:
+      - Egress
+    egress:
+      - to:
+          - podSelector:
+              matchLabels:
+                app.kubernetes.io/name: prometheus
+        ports:
+          - protocol: TCP
+            port: 1
+            endPort: 62000
+  
+  - name: allow-metrics-scrape
+    podSelector:
+      matchExpressions:
+        - key: app
+          operator: In
+          values:
+            - api-service
+            - producer-service
+            - consumer-service
+    policyTypes:
+      - Ingress
+    ingress:
+      - from:
+          - podSelector:
+              matchLabels:
+                app.kubernetes.io/name: prometheus
+        ports:
+          - protocol: TCP
+            port: 3000
+
+  - name: alertmanager-allow
+    podSelector:
+      matchLabels:
+        app.kubernetes.io/name: alertmanager
+    policyTypes:
+      - Ingress
+      - Egress
+    ingress:
+      - from:
+          - podSelector:
+              matchLabels:
+                app.kubernetes.io/name: prometheus
+        ports:
+          - protocol: TCP
+            port: 9093
+    egress:
+      - to:
+          - ipBlock:
+              cidr: 0.0.0.0/0
+        ports:
+          - protocol: TCP
+            port: 443
+          - protocol: TCP
+            port: 587 
+
+prometheusAlerts:
+  - group: api-service
+    release: kube-prometheus-stack
+    rules:
+      - alert: ApiServiceDown
+        expr: up{job="api-service"} == 0 or absent(up{job="api-service"})
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "API Service down"
+          description: "The api-service has been down for more than 1 minute."
+      - alert: ApiServiceHighCPU
+        expr: rate(container_cpu_usage_seconds_total{pod=~"api-service.*"}[5m]) > 0.8
+        for: 2m
+        labels:
+          severity: warning
+        annotations:
+          summary: "API Service high CPU usage"
+          description: "CPU usage of api-service is above 80% for 2 minutes."
+
+  - group: producer-service
+    release: kube-prometheus-stack
+    rules:
+      - alert: ProducerServiceDown
+        expr: up{job="producer-service"} == 0 or absent(up{job="consumer-service"})
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Producer Service down"
+          description: "The producer-service has been down for more than 1 minute."
+
+  - group: consumer-service
+    release: kube-prometheus-stack
+    rules:
+      - alert: ConsumerServiceDown
+        expr: up{job="consumer-service"} == 0 or absent(up{job="consumer-service"})
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Consumer Service down"
+          description: "The consumer-service has been down for more than 1 minute."
+
