--- a/k8s/network/networkpolicy-consumer-allow.yaml
+++ b/k8s/network/networkpolicy-consumer-allow.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: consumer-allow
-  namespace: kafka
+  namespace: dev
 spec:
   podSelector:
     matchLabels:
