--- a/k8s/network/networkpolicy-deny-all.yaml
+++ b/k8s/network/networkpolicy-deny-all.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: deny-all
-  namespace: kafka
+  namespace: dev
 spec:
   podSelector: {}
   policyTypes:
