--- a/k8s/services/producer-service.yaml
+++ b/k8s/services/producer-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-service
+  name: producer-service
   namespace: dev
   labels:
-    app: api-service
+    app: producer-service
 spec:
   type: ClusterIP
   selector:
-    app: api-service
+    app: producer-service
   ports:
     - name: http
       protocol: TCP
