--- a/services/api/src/package.json
+++ b/services/api/src/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "express": "^4.18.2",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "prom-client": "^15.1.3"
   }
 }
