--- a/charts/mychart/templates/persistantvolume.yaml
+++ b/charts/mychart/templates/persistantvolume.yaml
@@ -1,14 +1,11 @@
-{{- $namespace := .Release.Namespace | default "default" }}
-{{- $kafka := .Values.kafka }}
-{{- range $i := until $kafka.replicas }}
----
+{{- range $i := until (int .Values.kafka.replicas) }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: data-kafka-{{ $i }}
 spec:
   capacity:
-    storage: {{ $kafka.storage }}
+    storage: {{ .Values.kafka.storage }}
   accessModes:
     - ReadWriteOnce
   storageClassName: manual-hostpath
