--- a/charts/mychart/templates/statefulset.yaml
+++ b/charts/mychart/templates/statefulset.yaml
@@ -53,4 +53,4 @@ spec:
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
-            storage: 5Gi
+            storage: {{ $kafka.storage }}
