--- a/charts/mychart/templates/statefulset.yaml
+++ b/charts/mychart/templates/statefulset.yaml
@@ -17,6 +17,8 @@ spec:
       labels:
         app: kafka
     spec:
+      securityContext:
+        fsGroup: 1000
       containers:
         - name: kafka
           image: "{{ $kafka.image | default "apache/kafka" }}:{{ $kafka.tag | default "4.1.0" }}"
@@ -50,7 +52,12 @@ spec:
     - metadata:
         name: data
       spec:
+        securityContext:
+          fsGroup: 1000
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
             storage: {{ $kafka.storage }}
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 1000
