--- a/services/producer/src/package.json
+++ b/services/producer/src/package.json
@@ -1,10 +1,21 @@
 {
   "name": "producer-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
     "express": "^4.18.2",
     "kafkajs": "^2.2.4",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.40.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.48.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.48.0",
+    "@opentelemetry/resources": "^1.21.0",
+    "@opentelemetry/sdk-metrics": "^1.21.0",
+    "@opentelemetry/sdk-node": "^0.48.0",
+    "@opentelemetry/semantic-conventions": "^1.21.0"
+  },
+  "scripts": {
+    "start": "node --require ./instrumentation.js app.js"
   }
 }
